@@ -3,7 +3,6 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.services.MessagingService;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -24,11 +23,12 @@ public record MessagingServiceIndex(MessagingService messagingService) implement
         "fqnParts",
         getFQNParts(
             messagingService.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.MESSAGING_SERVICE);
     doc.put("owner", getEntityWithDisplayName(messagingService.getOwner()));
     doc.put("domain", getEntityWithDisplayName(messagingService.getDomain()));
+    doc.put("followers", SearchIndexUtils.parseFollowers(messagingService.getFollowers()));
     return doc;
   }
 }
